@startuml
title Use Command Class View

class Parser {
  + parse(input: String): ParsedCommand
}

class CG2StocksTracker {
  + run()
}

class PortfolioBook {
  + usePortfolio(name: String)
}

class Ui {
  + showMessage(message: String)
}

CG2StocksTracker ..> PortfolioBook : usePortfolio(name)
CG2StocksTracker ..> Ui : show active
@enduml
